[package]
name = "api"
version = "0.1.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "explorer api"
readme = "README.md"
repository = "https://github.com/bingryan/explorer-api"
homepage = "https://github.com/bingryan/explorer-api"
keywords = ["api", "substrate", "explorer"]
exclude = [
    "docs/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#runtime
tokio = { version = "1.5.0", features = ["full"] }

# https://github.com/actix/actix-extras
actix = { version = "0.11.1", default-features = false }
actix-web = { version = "3.3.2", default-features = false }
actix-http = { version = "2.2.0", default-features = false }
actix-cors = { version = "0.5.4", default-features = false }

# serde
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.125"

config = "0.11"

# log
env_logger = "0.8.3"
llog = { package = "log", version = "0.4.14", default-features = false }
fast_log = "1.3.23"
yansi = "0.5"

# db
meilisearch-sdk = "0.8.0"

num_cpus = "1.13.0"

# validator
validator = "0.13.0"
validator_derive = "0.13.0"

dotenv = "0.15.0"


